fix overflow

--- a/src/main.css
+++ b/src/main.css
@@ -572,16 +572,16 @@ video {
   bottom: -0.5rem;
 }
 
+.-left-1 {
+  left: -0.25rem;
+}
+
 .-left-2 {
   left: -0.5rem;
 }
 
 .-right-2 {
   right: -0.5rem;
-}
-
-.-right-4 {
-  right: -1rem;
 }
 
 .-top-2 {
@@ -664,10 +664,6 @@ video {
   top: 2.5rem;
 }
 
-.top-12 {
-  top: 3rem;
-}
-
 .top-4 {
   top: 1rem;
 }
@@ -678,26 +674,6 @@ video {
 
 .top-\[calc\(100\%-13rem\)\] {
   top: calc(100% - 13rem);
-}
-
-.left-\[96px\] {
-  left: 96px;
-}
-
-.left-\[128px\] {
-  left: 128px;
-}
-
-.-bottom-4 {
-  bottom: -1rem;
-}
-
-.-bottom-1 {
-  bottom: -0.25rem;
-}
-
-.-left-1 {
-  left: -0.25rem;
 }
 
 .isolate {
@@ -980,14 +956,6 @@ video {
   width: 100vw;
 }
 
-.w-52 {
-  width: 13rem;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
 .min-w-0 {
   min-width: 0px;
 }
@@ -1047,6 +1015,16 @@ video {
 
 .-translate-y-16 {
   --tw-translate-y: -4rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-1 {
+  --tw-translate-x: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-1 {
+  --tw-translate-x: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
